// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: DocHeading correctly formats title 1`] = `
<h1>
  Test test
</h1>
`;

exports[`Utilities: DocHeading renders heading and updates document title 1`] = `
<h1>
  Test
</h1>
`;
